<resources>
    <string name="app_name">Instant Car Rental</string>
    <string name="rent_you_car_with_just_few_clicks">Rent you car with just few clicks</string>
    <string name="login">login</string>
    <string name="privacy_policy_terms_of_use">Privacy policy terms of use</string>
    <string name="signup_account">REGISTER ACCOUNT</string>
    <string name="hello_let_s_get_started">Hello! Let\'s get started</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="signup">signup</string>
    <string name="login_account">LOGIN ACCOUNT</string>
    <string name="hello_welcome_back">Hello! Welcome</string>
    <string name="instant_car_rental">Instant Car Rental</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="search_car_description">Search car</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="logout">LogOut</string>
    <string name="create_account">create account</string>
    <string name="by_sacramento_text">Developed by Sacramento</string>
    <string name="promotion">promotion</string>
    <string name="cost">cost</string>
    <string name="long_short_term_rental">Manage term rental</string>
    <string name="manage_reservation">Manage reservation</string>
    <string name="new_reservation">New Reservation</string>
    <string name="toolbar_image">ToolBar image</string>
    <string name="member_text">Already a member?</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_member_text">Not a member?</string>
    <string name="sign_up_now">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="feedback">Send Feedback</string>
    <string name="tell_about">About</string>
    <string name="sign_out_menu_text">Sign Out</string>
    <string name="get_started">Get Started</string>
    <string name="policy">By using our service you are agreeing to our Term and Privacy Statement</string>
</resources>