<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:theme="@style/splashScreenTheme"
    android:background="@drawable/bar_image3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/login_account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="60dp"
            android:paddingBottom="10dp"
            android:text="@string/login_account"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_baseline_account_circle_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="25dp"
            android:text="@string/hello_welcome_back"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="120dp"
            android:text="@string/instant_car_rental"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="3dp"
            app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsername"
                android:inputType="textAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxStrokeWidth="3dp"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:id="@+id/ForgotPassButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:fontFamily="sans-serif-medium"
            android:textSize="11sp"
            android:textStyle="bold"
            app:strokeWidth="2dp"
            app:strokeColor="@color/myBackgroundColor"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2196F3"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginVertical="13dp"
            android:id="@+id/signUpNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:textStyle="bold"
            android:text="@string/not_a_member_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <Button
            android:padding="2dp"
            android:id="@+id/signUpTextButton"
            android:layout_marginTop="10dp"
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="11sp"
            android:textStyle="bold"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up_now"
            android:textColor="@color/black"
            app:strokeWidth="2dp"
            app:strokeColor="@color/myBackgroundColor"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

    </LinearLayout>

</LinearLayout>