<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bar_image"
    android:padding="20dp"
    android:theme="@style/splashScreenTheme1"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/sign_up_account_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="10dp"
                android:text="@string/signup_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_account_black" />

            <TextView
                android:id="@+id/hello_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingStart="25dp"
                android:text="@string/hello_let_s_get_started"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFullNames"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColorHint="#C2B2A7"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:boxBackgroundColor="#DD1C1A1A"
                app:boxStrokeWidth="3dp"
                app:startIconDrawable="@drawable/ic_baseline_full_names">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/username"
                app:errorEnabled="true"
                app:helperTextEnabled="false"
                app:endIconMode="clear_text"
                android:textColorHint="#C2B2A7"
                app:boxBackgroundColor="#DD1C1A1A"
                app:boxStrokeWidth="3dp"
                app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEditTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:helperTextEnabled="false"
                app:endIconMode="clear_text"
                android:textColorHint="#C2B2A7"
                app:boxBackgroundColor="#DD1C1A1A"
                app:boxStrokeWidth="3dp"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/password"
                app:errorEnabled="true"
                android:textColorHint="#C2B2A7"
                app:boxBackgroundColor="#DD1C1A1A"
                app:boxStrokeWidth="3dp"
                app:helperTextTextColor="#FFEB3B"
                app:passwordToggleEnabled="true"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/phone"
                android:textColorHint="#C2B2A7"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:boxBackgroundColor="#DD1C1A1A"
                app:endIconMode="clear_text"
                app:boxStrokeWidth="3dp"
                app:prefixText="+27 "
                app:startIconDrawable="@drawable/ic_baseline_call_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:maxLength="11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:inputType="number"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/memberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/member_text"
                android:textAlignment="center"
                android:textColor="@color/myBackgroundColor"
                android:textSize="15sp"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/signInTextButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in"
                android:textColor="#FFEB3B"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>