<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="266dp"
        android:layout_marginTop="190dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_rental"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/homeLogInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:backgroundTint="@color/black"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:strokeWidth="1dp"
            app:strokeColor="#9CA695"
            style="?attr/materialButtonOutlinedStyle" />
        <Button
            android:id="@+id/homeSignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1C5E93"
            android:fontFamily="@font/aclonica"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amita"
        android:paddingTop="120dp"
        android:text="@string/privacy_policy_terms_of_use"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>